--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./css/images/icono.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" href="src/css/css/images/icono.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/css/estilos.css">
 </head>
 <body class="font-principal">
     
     <header>
         <nav class="wrapper h-20 flex items-center justify-between">
             <a href="./" class="w-1/3 max-w-[140px]">
-                <img src="./css/images/logo.svg" class="w-full">
+                <img src="src/css/css/images/logo.svg" class="w-full">
             </a>
 
             <input type="checkbox" id="menu" class="peer hidden">
@@ -35,7 +35,7 @@
 
         <section class="wrapper grid gap-8 justify-items-center items-center pb-12 md:grid-cols-2 md:py-24">
 
-            <img src="./css/images/illustration-intro.svg" class="w-full max-w-lg md:order-1">
+            <img src="src/css/css/images/illustration-intro.svg" class="w-full max-w-lg md:order-1">
             
             <article class="text-center space-y-6 md:text-left md:space-y-8">
                 <h1 class="text-4xl font-bold text-very-dark-blue md:text-5xl">Reunir a todos para crear mejores productos</h1>
@@ -48,7 +48,7 @@
     </header>
 
     <figure class="absolute inset-0 overflow-hidden pointer-events-none">
-        <img src="./css/images/bg-tablet-pattern.svg" class="absolute w-full -z-10 -top-24 -right-1/4 max-w-2xl">
+        <img src="src/css/css/images/bg-tablet-pattern.svg" class="absolute w-full -z-10 -top-24 -right-1/4 max-w-2xl">
     </figure>
 
     <main>
@@ -96,7 +96,7 @@
             <h2 class="text-3xl font-bold text-very-dark-blue md:text-4xl">Que opinan de nosotros ?</h2>
             <div class="mt-24 mb-14">
                 <article class="bg-vary-light-gray pt-16 pb-12 px-4 relative">
-                    <img src="css/images/avatar-ali.png" class="absolute w-24 aspect-square -top-12 inset-x-0 mx-auto">
+                    <img src="src/css/css/images/avatar-ali.png" class="absolute w-24 aspect-square -top-12 inset-x-0 mx-auto">
                     <h3 class="text-xl mb-4 pt-2 font-bold text-dark-blue">Ali Bravo</h3>
                     <p class="text-dark-grayish-blue">“Hemos podido cancelar muchas otras suscripciones desde que usamos Manage. Ya no hay confusión entre canales y todos están mucho más concentrados”.</p>
                 </article>
@@ -135,25 +135,25 @@
             <div class="flex flex-wrap gap-4 justify-between w-full [grid-area:social-media]">
 
                 <a href="#">
-                    <img src="./css/images/icon-facebook.svg" class="w-8">
+                    <img src="src/css/css/images/icon-facebook.svg" class="w-8">
                 </a>
                 <a href="#">
-                    <img src="./css/images/icon-youtube.svg" class="w-8">
+                    <img src="src/css/css/images/icon-youtube.svg" class="w-8">
                 </a>
                 <a href="#">
-                    <img src="./css/images/icon-twitter.svg" class="w-8">
+                    <img src="src/css/css/images/icon-twitter.svg" class="w-8">
                 </a>
                 <a href="#">
-                    <img src="./css/images/icon-pinterest.svg" class="w-8">
+                    <img src="src/css/css/images/icon-pinterest.svg" class="w-8">
                 </a>
                 <a href="#">
-                    <img src="./css/images/icon-instagram.svg"  class="w-8">
+                    <img src="src/css/css/images/icon-instagram.svg"  class="w-8">
                 </a>
 
             </div>
 
             <a href="#" class="[grid-area:logo]">
-                <img src="./css/images/logo-white.svg" class="">
+                <img src="src/css/css/images/logo-white.svg" class="">
             </a>
 
             <p class="text-dark-grayish-blue text-center [grid-area:copy] md:text-right">Copyright 2023. Derechos reservados</p>
